[gd_scene load_steps=24 format=3 uid="uid://depguk060dslk"]

[ext_resource type="PackedScene" uid="uid://ghkd0jp7xmqe" path="res://scenes/player.tscn" id="2_6me2q"]
[ext_resource type="PackedScene" uid="uid://d1to2hvb1e7vg" path="res://ui/esc_menu.tscn" id="2_32cff"]
[ext_resource type="FontFile" uid="uid://dbvie114nxi63" path="res://assets/PixelOperator8.ttf" id="3_f1a5k"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="4_a1xyp"]
[ext_resource type="Texture2D" uid="uid://b68h125lrri47" path="res://assets/Icon21.png" id="4_d23ut"]
[ext_resource type="Texture2D" uid="uid://wsh0p4f0i8pr" path="res://assets/Icon15.png" id="5_hytxh"]
[ext_resource type="Texture2D" uid="uid://c5xs0w4qxtcw5" path="res://assets/Icon9.png" id="6_un0er"]
[ext_resource type="Texture2D" uid="uid://b42d6ei70jy2h" path="res://assets/dbox2.png" id="7_qx2cn"]
[ext_resource type="Texture2D" uid="uid://d28rr6yp7bv7m" path="res://assets/Icon16.png" id="8_ofemp"]
[ext_resource type="PackedScene" uid="uid://bowtmopoqfbjy" path="res://scenes/env/castle.tscn" id="11_x6iue"]
[ext_resource type="PackedScene" uid="uid://cic7c02bekh4i" path="res://scenes/potion_spawnner.tscn" id="12_4o0cq"]
[ext_resource type="PackedScene" uid="uid://wockht43v4fl" path="res://scenes/dark_boss.tscn" id="12_4pqaj"]
[ext_resource type="PackedScene" uid="uid://dx11bkvrufi1g" path="res://scenes/enemy_1.tscn" id="13_l82kx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55l3m"]
bg_color = Color(0.411765, 0.164706, 0.745098, 0.443137)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.831373, 0.686275, 0.215686, 1)
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0
shadow_color = Color(0, 0, 0, 0.686275)
shadow_size = 1
shadow_offset = Vector2(5, 5)

[sub_resource type="Animation" id="Animation_643m0"]
resource_name = "not_enough"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%enough:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(431, 643), Vector2(431, 585), Vector2(431, 575), Vector2(431, 653)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%enough:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%enough:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hrkj1"]
_data = {
"not_enough": SubResource("Animation_643m0")
}

[sub_resource type="Animation" id="Animation_xswep"]
resource_name = "item_add"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%add_items:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1176, 488), Vector2(802, 488), Vector2(802, 488), Vector2(1183, 488)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%add_items:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%add_items:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0119232, 1.97597, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_u84ic"]
resource_name = "timer fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%PotionTimerLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.307786),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%PotionTimerLabel")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cxko"]
_data = {
"item_add": SubResource("Animation_xswep"),
"timer fade": SubResource("Animation_u84ic")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fxr6x"]
texture = ExtResource("7_qx2cn")
expand_margin_left = 7.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_31vn0"]
texture = ExtResource("7_qx2cn")
expand_margin_left = 7.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf6xh"]
bg_color = Color(0.282353, 0, 0.388235, 1)

[sub_resource type="Theme" id="Theme_8xft4"]
Button/styles/hover = SubResource("StyleBoxTexture_fxr6x")
Button/styles/normal = SubResource("StyleBoxTexture_31vn0")
Button/styles/pressed = SubResource("StyleBoxFlat_xf6xh")

[node name="Scene" type="Node2D"]

[node name="castle" parent="." instance=ExtResource("11_x6iue")]
position = Vector2(-8, -9)

[node name="Node2D" parent="castle" index="3"]
position = Vector2(1969, 355)

[node name="Node2D2" parent="castle" index="5"]
position = Vector2(2280, 289)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_a1xyp")

[node name="CanvasLayer" type="CanvasLayer" parent="GameManager"]

[node name="dead_screen" type="Control" parent="GameManager/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameManager/CanvasLayer/dead_screen"]
offset_left = 510.0
offset_top = 282.0
offset_right = 718.0
offset_bottom = 324.0
theme_override_font_sizes/font_size = 30
text = "RIP player"

[node name="Button" type="Button" parent="GameManager/CanvasLayer/dead_screen"]
custom_minimum_size = Vector2(160.215, 0)
layout_mode = 0
offset_left = 505.0
offset_top = 362.0
offset_right = 665.215
offset_bottom = 405.0
theme_override_font_sizes/font_size = 25
text = "retry"

[node name="give_up" type="Button" parent="GameManager/CanvasLayer/dead_screen"]
custom_minimum_size = Vector2(113.945, 0)
layout_mode = 0
offset_left = 524.0
offset_top = 424.0
offset_right = 637.945
offset_bottom = 467.0
theme_override_font_sizes/font_size = 25
text = "give up"

[node name="ScoreLabel" type="Label" parent="GameManager/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "collect items"

[node name="PotionTimerLabel" type="Label" parent="GameManager/CanvasLayer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
offset_left = 857.0
offset_top = 486.0
offset_right = 1017.0
offset_bottom = 541.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 40

[node name="esc_menu" parent="GameManager/CanvasLayer" instance=ExtResource("2_32cff")]
visible = false
top_level = true

[node name="enough" type="Label" parent="GameManager/CanvasLayer/esc_menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -5.0
offset_right = 145.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_f1a5k")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_55l3m")
text = "Not enough resources !"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="add_items" type="Label" parent="GameManager/CanvasLayer/esc_menu"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 600.0
offset_top = -160.0
offset_right = 890.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_f1a5k")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_55l3m")
text = "items purchaced"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameManager/CanvasLayer/esc_menu"]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_hrkj1")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="GameManager/CanvasLayer/esc_menu"]
libraries = {
"": SubResource("AnimationLibrary_0cxko")
}

[node name="PotionTimer" type="Timer" parent="GameManager/CanvasLayer"]

[node name="GridContainer" type="GridContainer" parent="GameManager/CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -98.0
offset_right = -33.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 19
theme_override_constants/v_separation = 6
columns = 2

[node name="enchant" type="Button" parent="GameManager/CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_8xft4")
theme_override_colors/font_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_focus_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_disabled_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_constants/icon_max_width = 34
theme_override_fonts/font = ExtResource("3_f1a5k")
text = "health"
icon = ExtResource("8_ofemp")
icon_alignment = 2

[node name="invis" type="Button" parent="GameManager/CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_8xft4")
theme_override_colors/font_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_focus_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_disabled_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_constants/icon_max_width = 34
theme_override_fonts/font = ExtResource("3_f1a5k")
text = "Invisibility"
icon = ExtResource("6_un0er")
icon_alignment = 2

[node name="speed" type="Button" parent="GameManager/CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_8xft4")
theme_override_colors/font_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_focus_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_disabled_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_constants/icon_max_width = 34
theme_override_fonts/font = ExtResource("3_f1a5k")
text = "Speed"
icon = ExtResource("5_hytxh")
icon_alignment = 2

[node name="strength" type="Button" parent="GameManager/CanvasLayer/GridContainer"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_8xft4")
theme_override_colors/font_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_focus_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_colors/font_disabled_color = Color(0.937255, 0.74902, 0.0156863, 1)
theme_override_constants/icon_max_width = 34
theme_override_fonts/font = ExtResource("3_f1a5k")
text = "Strength"
icon = ExtResource("4_d23ut")
icon_alignment = 2

[node name="Player" parent="." instance=ExtResource("2_6me2q")]
unique_name_in_owner = true
position = Vector2(198, 511)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.9, 0.9)

[node name="Node2D" type="Node2D" parent="."]

[node name="PotionSpawnner" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(143, 168)

[node name="PotionSpawnner2" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(1054, 183)
item_type = "blue"

[node name="PotionSpawnner3" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(1017, 531)

[node name="PotionSpawnner4" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(716, 114)
item_type = "blue"

[node name="PotionSpawnner5" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(375, 594)
item_type = "health"

[node name="PotionSpawnner7" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(450, 101)
item_type = "health"

[node name="PotionSpawnner6" parent="." instance=ExtResource("12_4o0cq")]
position = Vector2(380, 375)
item_type = "speed"

[node name="DarkBoss" parent="." instance=ExtResource("12_4pqaj")]
position = Vector2(907, 200)

[node name="enemy1" parent="." instance=ExtResource("13_l82kx")]
position = Vector2(668, 578)

[node name="enemy2" parent="." instance=ExtResource("13_l82kx")]
position = Vector2(309, 172)

[connection signal="pressed" from="GameManager/CanvasLayer/dead_screen/give_up" to="GameManager" method="_on_give_up_pressed"]
[connection signal="pressed" from="GameManager/CanvasLayer/dead_screen/give_up" to="GameManager" method="_on_button_2_pressed"]
[connection signal="timeout" from="GameManager/CanvasLayer/PotionTimer" to="GameManager" method="_on_potion_timer_timeout"]
[connection signal="pressed" from="GameManager/CanvasLayer/GridContainer/enchant" to="GameManager" method="_on_enchant_pressed"]
[connection signal="pressed" from="GameManager/CanvasLayer/GridContainer/invis" to="GameManager" method="_on_invis_pressed"]
[connection signal="pressed" from="GameManager/CanvasLayer/GridContainer/speed" to="GameManager" method="_on_speed_pressed"]
[connection signal="pressed" from="GameManager/CanvasLayer/GridContainer/strength" to="GameManager" method="_on_strength_pressed"]

[editable path="castle"]
